Начал работать с оформлением

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Sedona: главная</title>
+  <link rel="stylesheet" href="css/style-min.css">
 </head>
 <body>
   <div class="global-wrapper">
@@ -40,13 +41,13 @@
       </div>
 
       <div class="reason">
-        <div class="reason__item">
+        <div class="reason__item  reason__item--bg">
           <h3 class="reason__title">Настоящий городок</h3>
           <span class="reason__number">№1</span>
           <p class="reason__text">Седона не атракцион для туристов, там течет своя жизнь</p>
         </div>
 
-        <figure class="reason__figure  reason__figure--right">
+        <figure class="reason__img-wrapper  reason__img-wrapper--right">
           <img class="reason__image" src="img/photo-city-mobile@1x.jpg" width="320" height="260" alt="photo city Sedona">
         </figure>
       </div>
@@ -69,13 +70,13 @@
       </div>
 
       <div class="reason">
-        <div class="reason__item">
+        <div class="reason__item  reason__item--bg">
           <h3 class="reason__title">Там есть мост дьявола</h3>
           <span class="reason__number">№2</span>
           <p class="reason__text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
         </div>
 
-        <figure class="reason__figure  reason__figure--left">
+        <figure class="reason__img-wrapper  reason__img-wrapper--left">
           <img class="reason__image" src="img/photo-bridge-mobile@1x.jpg" width="320" height="260" alt="photo bridge devil's">
         </figure>
       </div>
