--- a/src/form.html
+++ b/src/form.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Sedona: форма</title>
+  <link rel="stylesheet" href="css/style-min.css">
 </head>
 <body>
   <div class="global-wrapper">
