--- a/src/index.html
+++ b/src/index.html
@@ -8,26 +8,33 @@
 <body>
   <div class="global-wrapper">
     <header class="page-header">
-      <div class="logo  page-header__logo">
-        <img class="logo__img" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="logo sedona city">
-      </div>
+      <div class="page-header__wrapper">
+        <div class="logo  page-header__logo">
+          <img class="logo__img" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="logo sedona city">
+        </div>
 
-      <nav class="menu  page-header__menu">
-        <ul class="menu__list">
-          <li class="menu__item  menu__item--active">
-            <span class="menu__link">Главная</span>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="photo.html">Фото и видео</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="form.html">Форма отзыва</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="https://htmlacademy.ru">HTML Academy</a>
-          </li>
-        </ul>
-      </nav>
+        <nav class="menu  page-header__menu">
+          <ul class="menu__list">
+            <li class="menu__item  menu__item--active">
+              <span class="menu__link  menu__link--cursor">Главная</span>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="photo.html">Фото и видео</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="form.html">Форма отзыва</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="https://htmlacademy.ru">HTML Academy</a>
+            </li>
+          </ul>
+          <div class="menu__burger">
+            <button class="menu__btn-burger" type="button">
+              <img class="menu__btn-img" src="../img/icon-menu.svg" width="23" height="21" alt="menu">
+            </button>
+          </div>
+        </nav>
+      </div>
 
       <div class="intro  page-header__intro">
         <img class="intro__text" src="img/text-sedona-index.svg" width="282" height="214" alt="Welcome Sedona">
@@ -41,10 +48,10 @@
       </div>
 
       <div class="reason">
-        <div class="reason__item  reason__item--bg">
-          <h3 class="reason__title">Настоящий городок</h3>
-          <span class="reason__number">№1</span>
-          <p class="reason__text">Седона не атракцион для туристов, там течет своя жизнь</p>
+        <div class="reason__item  reason__item--bg-triangle">
+          <h3 class="reason__title  reason__title--color">Настоящий городок</h3>
+          <p class="reason__text  reason__text--color">&#8211; №1 &#8211;</p>
+          <p class="reason__text  reason__text--color">Седона не атракцион для туристов, там течет своя жизнь</p>
         </div>
 
         <figure class="reason__img-wrapper  reason__img-wrapper--right">
@@ -71,9 +78,9 @@
 
       <div class="reason">
         <div class="reason__item  reason__item--bg">
-          <h3 class="reason__title">Там есть мост дьявола</h3>
-          <span class="reason__number">№2</span>
-          <p class="reason__text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+          <h3 class="reason__title  reason__title--color">Там есть мост дьявола</h3>
+          <p class="reason__text  reason__text--color">&#8211; №2 &#8211;</p>
+          <p class="reason__text  reason__text--color">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
         </div>
 
         <figure class="reason__img-wrapper  reason__img-wrapper--left">
@@ -81,21 +88,21 @@
         </figure>
       </div>
 
-      <div class="reason">
+      <div class="reason  reason--padding">
         <h3 class="reason__title">Небольшая площадь</h3>
-        <span class="reason__number">№3</span>
+        <p class="reason__text">&#8211; №3 &#8211;</p>
         <p class="reason__text">Все достопримечательности находятся очень близко</p>
       </div>
 
-      <div class="reason">
+      <div class="reason  reason--padding">
         <h3 class="reason__title">Красивая дорога</h3>
-        <span class="reason__number">№4</span>
+        <p class="reason__text">&#8211; №4 &#8211;</p>
         <p class="reason__text">Ехать в седону из лас-вегаса совсем не скучно!</p>
       </div>
 
-      <div class="reason">
+      <div class="reason  reason--padding">
         <h3 class="reason__title">Мало туристов</h3>
-        <span class="reason__number">№5</span>
+        <p class="reason__text">&#8211; №5 &#8211;</p>
         <p class="reason__text">Большинство едет в гранд каньон и толпится там</p>
       </div>
 
