--- a/src/photo.html
+++ b/src/photo.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Sedona: фото и видео</title>
+  <link rel="stylesheet" href="css/style-min.css">
 </head>
 <body>
   <div class="global-wrapper">
