Оформил index.html

--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,7 @@
             </li>
           </ul>
           <div class="menu__burger">
-            <button class="menu__btn-burger" type="button">
-              <img class="menu__btn-img" src="../img/icon-menu.svg" width="23" height="21" alt="menu">
-            </button>
+
           </div>
         </nav>
       </div>
@@ -50,7 +48,7 @@
       <div class="reason">
         <div class="reason__item  reason__item--bg-triangle">
           <h3 class="reason__title  reason__title--color">Настоящий городок</h3>
-          <p class="reason__text  reason__text--color">&#8211; №1 &#8211;</p>
+          <p class="reason__text  reason__text--color">— №1 —</p>
           <p class="reason__text  reason__text--color">Седона не атракцион для туристов, там течет своя жизнь</p>
         </div>
 
@@ -59,19 +57,19 @@
         </figure>
       </div>
 
-      <div class="reason">
+      <div class="reason  reason--wrapper">
         <div class="reason__item">
-          <h3 class="reason__title">Жилье</h3>
+          <h3 class="reason__title  reason__title--houses">Жилье</h3>
           <p class="reason__text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
         </div>
 
         <div class="reason__item">
-          <h3 class="reason__title">Сувениры</h3>
+          <h3 class="reason__title  reason__title--souvenirs">Сувениры</h3>
           <p class="reason__text">Не только китайского, но и местного производства!</p>
         </div>
 
         <div class="reason__item">
-          <h3 class="reason__title">Еда</h3>
+          <h3 class="reason__title  reason__title--foods">Еда</h3>
           <p class="reason__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
         </div>
       </div>
@@ -79,7 +77,7 @@
       <div class="reason">
         <div class="reason__item  reason__item--bg">
           <h3 class="reason__title  reason__title--color">Там есть мост дьявола</h3>
-          <p class="reason__text  reason__text--color">&#8211; №2 &#8211;</p>
+          <p class="reason__text  reason__text--color">— №2 —</p>
           <p class="reason__text  reason__text--color">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
         </div>
 
@@ -90,19 +88,19 @@
 
       <div class="reason  reason--padding">
         <h3 class="reason__title">Небольшая площадь</h3>
-        <p class="reason__text">&#8211; №3 &#8211;</p>
+        <p class="reason__text">— №3 —</p>
         <p class="reason__text">Все достопримечательности находятся очень близко</p>
       </div>
 
       <div class="reason  reason--padding">
         <h3 class="reason__title">Красивая дорога</h3>
-        <p class="reason__text">&#8211; №4 &#8211;</p>
+        <p class="reason__text">— №4 —</p>
         <p class="reason__text">Ехать в седону из лас-вегаса совсем не скучно!</p>
       </div>
 
       <div class="reason  reason--padding">
         <h3 class="reason__title">Мало туристов</h3>
-        <p class="reason__text">&#8211; №5 &#8211;</p>
+        <p class="reason__text">— №5 —</p>
         <p class="reason__text">Большинство едет в гранд каньон и толпится там</p>
       </div>
 
@@ -113,7 +111,7 @@
       </section>
 
       <div class="map  page-main__map  map--nojs">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52380.69554419882!2d-111.80492368694084!3d34.86141640809284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sua!4v1491675674885" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe  class="map__img" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52380.69554419882!2d-111.80492368694084!3d34.86141640809284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sua!4v1491675674885" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
     </main>
 
