--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
       </div>
 
       <div class="reason">
-        <div class="reason__item  reason__item--bg-triangle">
+        <div class="reason__features  reason__features--bg-triangle">
           <h3 class="reason__title  reason__title--color">Настоящий городок</h3>
           <p class="reason__text  reason__text--color">— №1 —</p>
           <p class="reason__text  reason__text--color">Седона не атракцион для туристов, там течет своя жизнь</p>
@@ -54,24 +54,24 @@
       </div>
 
       <div class="reason">
-        <div class="reason__recommendation">
+        <div class="reason__item">
           <h3 class="reason__title  reason__title--houses">Жилье</h3>
           <p class="reason__text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
         </div>
 
-        <div class="reason__recommendation">
+        <div class="reason__item">
           <h3 class="reason__title  reason__title--souvenirs">Сувениры</h3>
           <p class="reason__text">Не только китайского, но и местного производства!</p>
         </div>
 
-        <div class="reason__recommendation">
+        <div class="reason__item">
           <h3 class="reason__title  reason__title--foods">Еда</h3>
           <p class="reason__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
         </div>
       </div>
 
       <div class="reason">
-        <div class="reason__item  reason__item--bg">
+        <div class="reason__features  reason__features--bg">
           <h3 class="reason__title  reason__title--color">Там есть мост дьявола</h3>
           <p class="reason__text  reason__text--color">— №2 —</p>
           <p class="reason__text  reason__text--color">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
