--- a/src/photo.html
+++ b/src/photo.html
@@ -41,8 +41,8 @@
         <p class="heading__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
       </div>
 
-      <div class="gallery  page-main__gallery">
-        <div class="post  gallery__post">
+      <div class="posts  page-main__posts">
+        <div class="post  posts__post">
           <figure class="post__img-wrapper">
             <a class="post__img-full" href="#">
               <img class="post__img" src="img/photo-1-mobile@1x.jpg" width="280" height="280" alt="Народные просторы">
@@ -66,7 +66,7 @@
           </div>
         </div>
 
-        <div class="post  gallery__post">
+        <div class="post  posts__post">
           <figure class="post__img-wrapper">
             <a class="post__img-full" href="#">
               <img class="post__img" src="img/photo-2-mobile@1x.jpg" width="280" height="280" alt="Местная растительность">
@@ -90,7 +90,7 @@
           </div>
         </div>
 
-        <div class="post  gallery__post">
+        <div class="post  posts__post">
           <figure class="post__img-wrapper">
             <a class="post__img-full" href="#">
               <img class="post__img" src="img/photo-3-mobile@1x.jpg" width="280" height="280" alt="Дорога на север">
@@ -114,7 +114,7 @@
           </div>
         </div>
 
-        <div class="post  gallery__post">
+        <div class="post  posts__post">
           <figure class="post__img-wrapper">
             <a class="post__img-full" href="#">
               <img class="post__img" src="img/photo-4-desktop@1x.jpg" width="280" height="280" alt="Мост дьявола">
