--- a/src/photo.html
+++ b/src/photo.html
@@ -24,7 +24,7 @@
           </li>
         </ul>
         <div class="menu__wrapper">
-          <a class="logo  page-header__logo" href="index.html">
+          <a class="logo  menu__logo" href="index.html">
             <img class="logo__img" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="logo sedona city">
           </a>
         </div>
