--- a/src/form.html
+++ b/src/form.html
@@ -24,7 +24,7 @@
           </li>
         </ul>
         <div class="menu__wrapper">
-          <a class="logo  page-header__logo" href="index.html">
+          <a class="logo  menu__logo" href="index.html">
             <img class="logo__img" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="logo sedona city">
           </a>
         </div>
@@ -42,7 +42,7 @@
       </div>
 
       <form class="feedback-form  page-main__feedback-form" action="/" method="post">
-        <fieldset class="feedback-form__item  feedback-form__item--full-name">
+        <fieldset class="feedback-form__item">
           <legend class="feedback-form__title">Представьтесь, пожалуйста:</legend>
 
           <label class="feedback-form__label">
@@ -61,27 +61,25 @@
           </label>
         </fieldset>
 
-        <fieldset class="feedback-form__item  feedback-form__item--contact-info">
+        <fieldset class="feedback-form__item">
           <legend class="feedback-form__title">Контактная информация:</legend>
 
-          <label class="feedback-form__label">
+          <label class="feedback-form__label  feedback-form__label--phone">
               <span class="feedback-form__text">Контактный телефон:</span>
-              <div class="feedback-form__input-wrapper">
+              <div class="feedback-form__input-wrapper  feedback-form__input-wrapper--phone">
                 <input class="feedback-form__input  feedback-form__input--phone" type="tel" name="phone" placeholder="Введите телефон">
-                <img class="feedback-form__phone-img" src="img/icon-phone.svg" width="18px" height="18px" alt="Phone">
               </div>
           </label>
 
-          <label class="feedback-form__label">
+          <label class="feedback-form__label  feedback-form__label--email">
               <span class="feedback-form__text">Электронная почта:</span>
-            <div class="feedback-form__input-wrapper">
-              <input class="feedback-form__input  feedback-form__input--email" type="email" name="email" placeholder="Введите e-mail" required>
-              <img class="feedback-form__email-img" src="img/icon-mail.svg" width="16px" height="12px" alt="Phone">
-            </div>
+              <div class="feedback-form__input-wrapper  feedback-form__input-wrapper--email">
+                <input class="feedback-form__input  feedback-form__input--email" type="email" name="email" placeholder="Введите e-mail" required>
+              </div>
           </label>
         </fieldset>
 
-        <fieldset class="feedback-form__item  feedback-form__item--impression">
+        <fieldset class="feedback-form__item">
           <legend class="feedback-form__title">Ваше общее впечатление:</legend>
 
           <label class="feedback-form__label  feedback-form__label--radio">
