Начал строить адаптивные сетки

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
           <p class="reason__text  reason__text--color">Седона не атракцион для туристов, там течет своя жизнь</p>
         </div>
 
-        <figure class="reason__img-wrapper  reason__img-wrapper--right">
+        <figure class="reason__img-wrapper">
           <img class="reason__img" src="img/photo-city-mobile@1x.jpg" width="320" height="260" alt="photo city Sedona">
         </figure>
       </div>
@@ -71,33 +71,35 @@
       </div>
 
       <div class="reason">
-        <div class="reason__features  reason__features--bg">
+        <div class="reason__features  reason__features--bg  reason__features--right">
           <h3 class="reason__title  reason__title--color">Там есть мост дьявола</h3>
           <p class="reason__text  reason__text--color">— №2 —</p>
           <p class="reason__text  reason__text--color">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
         </div>
 
-        <figure class="reason__img-wrapper  reason__img-wrapper--left">
+        <figure class="reason__img-wrapper">
           <img class="reason__img" src="img/photo-bridge-mobile@1x.jpg" width="320" height="260" alt="photo bridge devil's">
         </figure>
       </div>
 
-      <div class="reason  reason--bg-gray">
-        <h3 class="reason__title">Небольшая площадь</h3>
-        <p class="reason__text">— №3 —</p>
-        <p class="reason__text">Все достопримечательности находятся очень близко</p>
-      </div>
+      <div class="reason__wrapper">
+        <div class="reason  reason--bg-gray">
+          <h3 class="reason__title">Небольшая площадь</h3>
+          <p class="reason__text">— №3 —</p>
+          <p class="reason__text">Все достопримечательности находятся очень близко</p>
+        </div>
 
-      <div class="reason  reason--bg-gray">
-        <h3 class="reason__title">Красивая дорога</h3>
-        <p class="reason__text">— №4 —</p>
-        <p class="reason__text">Ехать в седону из лас-вегаса совсем не скучно!</p>
-      </div>
+        <div class="reason  reason--bg-gray">
+          <h3 class="reason__title">Красивая дорога</h3>
+          <p class="reason__text">— №4 —</p>
+          <p class="reason__text">Ехать в седону из лас-вегаса совсем не скучно!</p>
+        </div>
 
-      <div class="reason  reason--bg-gray">
-        <h3 class="reason__title">Мало туристов</h3>
-        <p class="reason__text">— №5 —</p>
-        <p class="reason__text">Большинство едет в гранд каньон и толпится там</p>
+        <div class="reason  reason--bg-gray">
+          <h3 class="reason__title">Мало туристов</h3>
+          <p class="reason__text">— №5 —</p>
+          <p class="reason__text">Большинство едет в гранд каньон и толпится там</p>
+        </div>
       </div>
 
       <section class="search-form  page-main__search-form">
