--- a/src/form.html
+++ b/src/form.html
@@ -30,14 +30,14 @@
         </div>
       </nav>
 
-      <div class="intro  page-header__intro">
+      <div class="intro  page-header__intro  intro--tablet">
         <img class="intro__text" src="img/text-sedona.svg" width="229" height="39" alt="Welcome Sedona">
       </div>
     </header>
 
     <main class="page-main">
       <div class="heading  page-main__heading">
-        <h3 class="heading__title">Оставьте свой отзыв</h3>
+        <h3 class="heading__title  heading__title--size">Оставьте свой отзыв</h3>
         <p class="heading__text">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
       </div>
 
@@ -125,7 +125,7 @@
         <fieldset class="feedback-form__item  feedback-form__item--message">
           <legend class="feedback-form__title">Опишите свои эмоции:</legend>
 
-          <textarea class="feedback-form__textarea" name="message" rows="4">Опишите подробно все свои восторги</textarea>
+          <textarea class="feedback-form__textarea" name="message" placeholder="Опишите подробно все свои восторги"></textarea>
         </fieldset>
 
         <button class="feedback-form__btn  btn" type="submit">Отправить отзыв</button>
