--- a/src/photo.html
+++ b/src/photo.html
@@ -30,14 +30,14 @@
         </div>
       </nav>
 
-      <div class="intro  page-header__intro">
+      <div class="intro  page-header__intro  intro--tablet">
         <img class="intro__text" src="img/text-sedona.svg" width="229" height="39" alt="Welcome Sedona">
       </div>
     </header>
 
     <main class="page-main">
       <div class="heading  page-main__heading">
-        <h3 class="heading__title">Фото и видео</h3>
+        <h3 class="heading__title  heading__title--size">Фото и видео</h3>
         <p class="heading__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
       </div>
 
@@ -49,8 +49,10 @@
             </a>
           </figure>
           <div class="post__caption">
-            <h4 class="post__subtitle">Народные просторы</h4>
-            <cite class="post__author">Автор фото: Борис</cite>
+            <div class="post__caption--wrapper">
+              <h4 class="post__subtitle">Народные просторы</h4>
+              <cite class="post__author">Автор фото: Борис</cite>
+            </div>
             <a class="post__like" href="#">
               <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px" viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
                 <g id="Page-1">
@@ -73,8 +75,10 @@
             </a>
           </figure>
           <div class="post__caption">
-            <h4 class="post__subtitle">Местная растительность</h4>
-            <cite class="post__author">Автор фото: Сергей</cite>
+            <div class="post__caption--wrapper">
+              <h4 class="post__subtitle">Местная растительность</h4>
+              <cite class="post__author">Автор фото: Сергей</cite>
+            </div>
             <a class="post__like" href="#">
               <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px" viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
                 <g id="Page-1">
@@ -97,8 +101,10 @@
             </a>
           </figure>
           <div class="post__caption">
-            <h4 class="post__subtitle">Дорога на север</h4>
-            <cite class="post__author">Автор фото: Петр</cite>
+            <div class="post__caption--wrapper">
+              <h4 class="post__subtitle">Дорога на север</h4>
+              <cite class="post__author">Автор фото: Петр</cite>
+            </div>
             <a class="post__like" href="#">
               <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px" viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
                 <g id="Page-1">
@@ -121,8 +127,10 @@
             </a>
           </figure>
           <div class="post__caption">
-            <h4 class="post__subtitle">Мост дьявола</h4>
-            <cite class="post__author">Автор фото: Антон</cite>
+            <div class="post__caption--wrapper">
+              <h4 class="post__subtitle">Мост дьявола</h4>
+              <cite class="post__author">Автор фото: Антон</cite>
+            </div>
             <a class="post__like" href="#">
               <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px" viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
                 <g id="Page-1">
@@ -153,7 +161,7 @@
                 </div>
               </div>
 
-              <div class="video-player__controls  clearfix">
+              <div class="video-player__controls">
                 <button class="video-player__btn  video-player__replay-btn">
                   <svg class="video-player__btn-img" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="16px" height="20px" viewBox="0 0 16 20" enable-background="new 0 0 16 20" xml:space="preserve">
                     <path d="M8,4V0L3,5l5,5V6c3.315,0,6,2.686,6,6s-2.685,6-6,6s-6-2.686-6-6H0c0,4.42,3.58,8,8,8s8-3.58,8-8S12.42,4,8,4z"/>
