Небольшие правки, чуть-чуть совсем

--- a/src/form.html
+++ b/src/form.html
@@ -30,8 +30,8 @@
         </div>
       </nav>
 
-      <div class="intro  page-header__intro  intro--tablet">
-        <img class="intro__text" src="img/text-sedona.svg" width="229" height="39" alt="Welcome Sedona">
+      <div class="intro  page-header__intro  intro--padding">
+        <img class="intro__img  intro__img--size" src="img/text-sedona.svg" width="229" height="39" alt="Welcome Sedona">
       </div>
     </header>
 
