--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
       </div>
 
       <div class="intro  page-header__intro">
-        <img class="intro__text" src="img/text-sedona-index.svg" width="282" height="214" alt="Welcome Sedona">
+        <img class="intro__img" src="img/text-sedona-index.svg" width="282" height="214" alt="Welcome Sedona">
       </div>
     </header>
 
@@ -44,7 +44,7 @@
       <div class="reason">
         <div class="reason__features  reason__features--bg-triangle">
           <h3 class="reason__title  reason__title--color">Настоящий городок</h3>
-          <p class="reason__text  reason__text--color">— №1 —</p>
+          <span class="reason__text  reason__text--color">— №1 —</span>
           <p class="reason__text  reason__text--color">Седона не атракцион для туристов, там течет своя жизнь</p>
         </div>
 
@@ -73,11 +73,11 @@
       <div class="reason">
         <div class="reason__features  reason__features--bg  reason__features--right">
           <h3 class="reason__title  reason__title--color">Там есть мост дьявола</h3>
-          <p class="reason__text  reason__text--color">— №2 —</p>
+          <span class="reason__text  reason__text--color">— №2 —</span>
           <p class="reason__text  reason__text--color">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
         </div>
 
-        <figure class="reason__img-wrapper">
+        <figure class="reason__img-wrapper  reason__img-wrapper--left">
           <img class="reason__img" src="img/photo-bridge-mobile@1x.jpg" width="320" height="260" alt="photo bridge devil's">
         </figure>
       </div>
@@ -85,19 +85,19 @@
       <div class="reason__wrapper">
         <div class="reason  reason--bg-gray">
           <h3 class="reason__title">Небольшая площадь</h3>
-          <p class="reason__text">— №3 —</p>
+          <span class="reason__text">— №3 —</span>
           <p class="reason__text">Все достопримечательности находятся очень близко</p>
         </div>
 
         <div class="reason  reason--bg-gray">
           <h3 class="reason__title">Красивая дорога</h3>
-          <p class="reason__text">— №4 —</p>
+          <span class="reason__text">— №4 —</span>
           <p class="reason__text">Ехать в седону из лас-вегаса совсем не скучно!</p>
         </div>
 
         <div class="reason  reason--bg-gray">
           <h3 class="reason__title">Мало туристов</h3>
-          <p class="reason__text">— №5 —</p>
+          <span class="reason__text">— №5 —</span>
           <p class="reason__text">Большинство едет в гранд каньон и толпится там</p>
         </div>
       </div>
