--- a/src/photo.html
+++ b/src/photo.html
@@ -30,8 +30,8 @@
         </div>
       </nav>
 
-      <div class="intro  page-header__intro  intro--tablet">
-        <img class="intro__text" src="img/text-sedona.svg" width="229" height="39" alt="Welcome Sedona">
+      <div class="intro  page-header__intro  intro--padding">
+        <img class="intro__img  intro__img--size" src="img/text-sedona.svg" width="229" height="39" alt="Welcome Sedona">
       </div>
     </header>
 
@@ -49,7 +49,7 @@
             </a>
           </figure>
           <div class="post__caption">
-            <div class="post__caption--wrapper">
+            <div class="post__caption-wrapper">
               <h4 class="post__subtitle">Народные просторы</h4>
               <cite class="post__author">Автор фото: Борис</cite>
             </div>
@@ -75,7 +75,7 @@
             </a>
           </figure>
           <div class="post__caption">
-            <div class="post__caption--wrapper">
+            <div class="post__caption-wrapper">
               <h4 class="post__subtitle">Местная растительность</h4>
               <cite class="post__author">Автор фото: Сергей</cite>
             </div>
@@ -101,7 +101,7 @@
             </a>
           </figure>
           <div class="post__caption">
-            <div class="post__caption--wrapper">
+            <div class="post__caption-wrapper">
               <h4 class="post__subtitle">Дорога на север</h4>
               <cite class="post__author">Автор фото: Петр</cite>
             </div>
@@ -127,7 +127,7 @@
             </a>
           </figure>
           <div class="post__caption">
-            <div class="post__caption--wrapper">
+            <div class="post__caption-wrapper">
               <h4 class="post__subtitle">Мост дьявола</h4>
               <cite class="post__author">Автор фото: Антон</cite>
             </div>
