--- a/src/form.html
+++ b/src/form.html
@@ -2,13 +2,14 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sedona: форма</title>
   <link rel="stylesheet" href="css/style-min.css">
 </head>
 <body>
   <div class="global-wrapper">
     <header class="page-header">
-      <nav class="menu  page-header__menu">
+      <nav class="menu  page-header__menu  menu--closed  menu--nojs">
         <ul class="menu__list">
           <li class="menu__item">
             <a class="menu__link" href="index.html">Главная</a>
@@ -27,6 +28,7 @@
           <a class="logo  menu__logo" href="index.html">
             <img class="logo__img" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="logo sedona city">
           </a>
+          <button class="menu__toggle" type="button">Открыть меню</button>
         </div>
       </nav>
 
@@ -42,7 +44,7 @@
       </div>
 
       <form class="feedback-form  page-main__feedback-form" action="/" method="post">
-        <div class="feedback-form__item">
+        <div class="feedback-form__item  feedback-form__item--full-name">
           <h3 class="feedback-form__title  feedback-form__title--align--left">Представьтесь
             <span class="feedback-form__title--hidden">, пожалуйста</span>:
           </h3>
@@ -87,7 +89,7 @@
           </label>
         </div>
 
-        <div class="feedback-form__item">
+        <div class="feedback-form__item  feedback-form__item--impression">
           <h3 class="feedback-form__title  feedback-form__title--align--left">
             <span class="feedback-form__title--fix-width">
               Ваше общее впечатление:
@@ -208,5 +210,6 @@
       </div>
     </div>
   </div>
+  <script src="js/menu.js"></script>
 </body>
 </html>
