--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sedona: главная</title>
   <link rel="stylesheet" href="css/style-min.css">
 </head>
@@ -9,7 +10,7 @@
   <div class="global-wrapper">
     <header class="page-header">
       <div class="page-header__wrapper">
-        <nav class="menu  page-header__menu">
+        <nav class="menu  page-header__menu  menu--closed  menu--nojs">
           <ul class="menu__list">
             <li class="menu__item">
               <span class="menu__link  menu__link--active">Главная</span>
@@ -26,6 +27,7 @@
           </ul>
           <div class="menu__wrapper">
             <img class="logo  menu__logo" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="logo sedona city">
+            <button class="menu__toggle" type="button">Открыть меню</button>
           </div>
         </nav>
       </div>
@@ -154,5 +156,6 @@
       </p>
     </footer>
   </div>
+  <script src="js/menu.js"></script>
 </body>
 </html>
