--- a/src/photo.html
+++ b/src/photo.html
@@ -2,13 +2,14 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sedona: фото и видео</title>
   <link rel="stylesheet" href="css/style-min.css">
 </head>
 <body>
   <div class="global-wrapper">
     <header class="page-header">
-      <nav class="menu  page-header__menu">
+      <nav class="menu  page-header__menu  menu--closed  menu--nojs">
         <ul class="menu__list">
           <li class="menu__item">
             <a class="menu__link" href="index.html">Главная</a>
@@ -27,6 +28,7 @@
           <a class="logo  menu__logo" href="index.html">
             <img class="logo__img" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="logo sedona city">
           </a>
+          <button class="menu__toggle" type="button">Открыть меню</button>
         </div>
       </nav>
 
@@ -227,5 +229,6 @@
       </p>
     </footer>
   </div>
+  <script src="js/menu.js"></script>
 </body>
 </html>
