--- a/src/form.html
+++ b/src/form.html
@@ -28,13 +28,14 @@
           <a class="logo  menu__logo" href="index.html">
             <img class="logo__img" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="logo sedona city">
           </a>
-          <button class="menu__toggle" type="button">Открыть меню</button>
+          <button class="burger  menu__burger" type="button">Открыть меню</button>
         </div>
       </nav>
 
-      <div class="intro  page-header__intro  intro--padding">
+      <h1 class="intro  page-header__intro  intro--padding">
+        <span class="visually-hidden">Седона</span>
         <img class="intro__img  intro__img--size" src="img/text-sedona.svg" width="229" height="39" alt="Welcome Sedona">
-      </div>
+      </h1>
     </header>
 
     <main class="page-main  page-main__form">
