--- a/src/photo.html
+++ b/src/photo.html
@@ -46,9 +46,13 @@
 
       <div class="posts  page-main__posts">
         <div class="post  posts__post">
-          <figure class="post__img-wrapper">
+          <figure class="post__img-wrapper  post__img-wrapper--height">
             <a class="post__img-full" href="#">
-              <img class="post__img" src="img/photo-1-mobile@1x.jpg" width="280" height="280" alt="Неродные просторы">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo-1-desktop@1x.jpg 1x, img/photo-1-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/photo-1-tablet@1x.jpg 1x, img/photo-1-tablet@2x.jpg 2x">
+                <img class="post__img" src="img/photo-1-mobile@1x.jpg" srcset="img/photo-1-mobile@2x.jpg 2x" alt="Неродные просторы">
+              </picture>
             </a>
           </figure>
           <div class="post__caption">
@@ -74,7 +78,11 @@
         <div class="post  posts__post">
           <figure class="post__img-wrapper">
             <a class="post__img-full" href="#">
-              <img class="post__img" src="img/photo-2-mobile@1x.jpg" width="280" height="280" alt="Местная растительность">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo-2-desktop@1x.jpg 1x, img/photo-2-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/photo-2-tablet@1x.jpg 1x, img/photo-2-tablet@2x.jpg 2x">
+                <img class="post__img" src="img/photo-2-mobile@1x.jpg" srcset="img/photo-2-mobile@2x.jpg 2x" alt="Местная растительность">
+              </picture>
             </a>
           </figure>
           <div class="post__caption">
@@ -100,7 +108,11 @@
         <div class="post  posts__post">
           <figure class="post__img-wrapper">
             <a class="post__img-full" href="#">
-              <img class="post__img" src="img/photo-3-mobile@1x.jpg" width="280" height="280" alt="Дорога на север">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo-3-desktop@1x.jpg 1x, img/photo-3-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/photo-3-tablet@1x.jpg 1x, img/photo-3-tablet@2x.jpg 2x">
+                <img class="post__img" src="img/photo-3-mobile@1x.jpg" srcset="img/photo-3-mobile@2x.jpg 2x" alt="Дорога на север">
+              </picture>
             </a>
           </figure>
           <div class="post__caption">
@@ -126,7 +138,11 @@
         <div class="post  posts__post">
           <figure class="post__img-wrapper">
             <a class="post__img-full" href="#">
-              <img class="post__img" src="img/photo-4-desktop@1x.jpg" width="280" height="280" alt="Мост дьявола">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo-4-desktop@1x.jpg 1x, img/photo-4-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/photo-4-tablet@1x.jpg 1x, img/photo-4-tablet@2x.jpg 2x">
+                <img class="post__img" src="img/photo-4-mobile@1x.jpg" srcset="img/photo-4-mobile@2x.jpg 2x" alt="Мост дьявола">
+              </picture>
             </a>
           </figure>
           <div class="post__caption">
@@ -154,7 +170,11 @@
         <h3 class="video__title">Все еще сомневаетесь?</h3>
         <p class="video__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
         <div class="video__wrapper">
-          <img class="video__img" src="img/video-mobile@1x.jpg" width="320" height="201" alt="sedona">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
+            <img class="video__img" src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" alt="sedona">
+          </picture>
 
           <div class="video-player  video__video-player">
             <div class="video-player__wrapper">
